refactor: simplify shopping list aggregation, improve retry/transaction handling
- Replace duplicated meal loops in ShoppingListController with stream-based
  aggregation, returning Map<String, Unit> with Unit.combine() for ingredient
  consolidation
- Add mass/volume unit families and base-unit conversion to Unit class
- Use Propagation.REQUIRES_NEW in RecipeService for clean transactions per retry,
  add @Recover fallback and SLF4J logging
- Replace spring-aspects with spring-boot-starter-aop